# Sanctifier

./: .commitlintrc.json  .env.example  .gitignore  CHECKSUMS.txt  Cargo.toml  DOCUMENTATION_INDEX.md  LIVE_TESTNET.md
.github/workflows/: benchmarks.yml  chromatic.yml  ci.yml  contracts-ci.yml  docs-lint.yml  release.yml  soroban-deploy.yml  soroban-examples.yml  wasm-bundlers.yml
benchmarks/: data_schemas_perf.json  docs_nav_perf.json
contracts/: MIGRATION_NOTES.md  README.md
contracts/amm-pool/tests/: proptest_amm.rs
contracts/benchmark/src/: budgets.rs  token.rs  vesting.rs
contracts/deposit-withdraw/src/: lib.rs
contracts/fixtures/finding-codes/: s022_raw_invoke_contract.rs
contracts/flashloan-token/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/kani-poc/: Cargo.toml
contracts/kani-poc/src/: lib.rs
contracts/multisig/: Cargo.toml
contracts/multisig/src/: lib.rs
contracts/proxy/: Cargo.toml
contracts/proxy/src/: lib.rs
contracts/security-disclaimers/: Cargo.toml
contracts/security-disclaimers/src/: lib.rs
contracts/security-disclaimers/tests/: integration_tests.rs  security_disclaimers_tests.rs
contracts/shadowing-example/: Cargo.toml
contracts/token-with-bugs/src/: lib.rs
contracts/unsafe-prng-example/: Cargo.toml
contracts/vesting/: Cargo.toml
contracts/vesting/src/: lib.rs
docs/: VIDEO_WALKTHROUGH_SCRIPT.md  ci-cd-setup.md  contract-security-disclaimers.md  error-codes.md
docs/case-studies/: soroban-examples.md
docs/rules/: transfer-from-no-allowance.md
e2e/tests/: call-graph.spec.ts
frontend/: commitlint.config.js  package-lock.json  package.json
frontend/app/components/: AiFixPanel.tsx  AnalysisTerminal.tsx  NavBar.tsx
frontend/app/dashboard/: call-graph.test.ts  page.tsx
frontend/app/playground/: page.tsx
frontend/app/providers/: ToastProvider.tsx
frontend/app/scan/: page.tsx
frontend/app/terminal/: page.tsx
frontend/tests/: ui-integration.test.ts
frontend/tests/e2e/: api-security.spec.ts  contract-analysis.spec.ts  csp-security.spec.ts  wasm-perf.spec.ts
schemas/: sarif-2.1.0.json
scripts/: check-benchmarks.sh  deploy-soroban-testnet.sh  deploy.sh  test-script-validation.sh  validate-runtime-guards.sh
specs/: BENCHMARK_METHODOLOGY.md
tooling/sanctifier-cli/: Cargo.toml  build.rs
tooling/sanctifier-cli/src/: exit_codes.rs  lib.rs  main.rs  vulndb.rs
tooling/sanctifier-cli/src/commands/: analyze.rs  badge.rs  benchmark.rs  color.rs  deploy.rs  diff.rs  doctor.rs  explain.rs  export.rs  fix.rs  init.rs  install_hooks.rs  lsp.rs  mod.rs  reentrancy.rs  report.rs  sarif.rs  serve.rs  suppress.rs  upgrade.rs  verify.rs  verify_deployment.rs  webhook.rs  workspace.rs
tooling/sanctifier-cli/tests/: cli_tests.rs  shared_fixtures.rs  versioning_tests.rs
tooling/sanctifier-core/: Cargo.toml
tooling/sanctifier-core/src/: analysis_cache.rs  finding_codes.rs  lib.rs  reentrancy.rs  smt.rs  storage_collision.rs
tooling/sanctifier-core/src/rules/: arithmetic_overflow.rs  auth_gap.rs  crlf_tests.rs  deprecated_sdk_usage.rs  ledger_size.rs  mod.rs  panic_detection.rs  raw_invoke_contract.rs  require_auth_for_args.rs  transfer_from_no_allowance.rs  truncation_bounds.rs  (+2 more)
tooling/sanctifier-wasm/: Cargo.toml  README.md
tooling/sanctifier-wasm/examples/: web_worker.js
tooling/sanctifier-wasm/pkg/: package.json
tooling/sanctifier-wasm/scripts/: verify-csp-compliance.js
tooling/sanctifier-wasm/src/: analysis.rs  converters.rs  lib.rs  validation.rs
tooling/sanctifier-wasm/tests/: wasm_tests.rs
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: analyzer.test.ts  extension.ts
(+16 files in other folders)
