[workspace]
members = [
    "tooling/sanctifier-cli",
    "tooling/sanctifier-core",
    "tooling/sanctifier-cli",
    "tooling/sanctifier-wasm",
    "contracts/vulnerable-contract",
    "contracts/token-with-bugs",
    "contracts/kani-poc",
    "contracts/runtime-guard-wrapper",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "20.5.0", default-features = false }

[workspace.package]
rust-version = "1.78"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
lto = true
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
