[package]
name = "uups-proxy"
version = "0.2.0"
edition = "2021"
description = "UUPS upgradeability pattern template for Soroban contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
security-disclaimers = { path = "../security-disclaimers", optional = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
security-disclaimers = ["dep:security-disclaimers"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
