
[package]
name = "sanctifier-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Sanctifier - Stellar Soroban Security Suite"
homepage = "https://github.com/HyperSafeD/Sanctifier"
repository = "https://github.com/HyperSafeD/Sanctifier"
license = "MIT"
keywords = ["stellar", "soroban", "security", "cli", "analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
sanctifier-core = { path = "../sanctifier-core" }
toml = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.3"

[[bin]]
name = "sanctifier"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
