
[package]
name = "sanctifier-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Sanctifier - Stellar Soroban Security Suite"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/HyperSafeD/Sanctifier"
repository = "https://github.com/HyperSafeD/Sanctifier"
documentation = "https://docs.rs/sanctifier-cli"
keywords = ["soroban", "stellar", "security", "cli", "analysis"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
sanctifier-core = { path = "../sanctifier-core" }
toml = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
rayon = "1.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
predicates = "3.0"
assert_cmd = "2.0"
jsonschema = "0.17"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "sanctifier"
path = "src/main.rs"

[build-dependencies]
regex = "1.10.3"
vergen = { version = "8", features = ["build", "cargo", "git", "git2", "rustc", "si"] }

